--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   path_provider: ^2.1.2
   dropdown_button2: ^2.3.9
   lottie: ^3.0.0
+  http: ^1.2.0
+  http_parser: ^4.0.2
+  mime: ^1.0.5
+  validators: ^3.0.0
+  encrypt: ^5.0.3
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
