add marker popup

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   validators: ^3.0.0
   encrypt: ^5.0.3
   url_launcher: ^6.2.4
+  google_maps_flutter: ^2.5.3
 
 dev_dependencies:
   flutter_test:
