--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   encrypt: ^5.0.3
   url_launcher: ^6.2.4
   google_maps_flutter: ^2.5.3
+  flutter_map_cancellable_tile_provider: ^2.0.0
 
 dev_dependencies:
   flutter_test:
