--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -53,7 +53,8 @@ dependencies:
   encrypt: ^5.0.3
   url_launcher: ^6.2.4
   google_maps_flutter: ^2.5.3
-
+  gallery_image_viewer: ^1.2.0
+  cached_network_image: ^3.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
