--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   cached_network_image: ^3.3.1
   flutter_map_cancellable_tile_provider: ^2.0.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
