--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   cached_network_image: ^3.3.1
   flutter_map_cancellable_tile_provider: ^2.0.0
   flutter_rating_bar: ^4.0.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
