--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.3",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
@@ -24,7 +25,6 @@
     "mysql2": "^3.1.2",
     "nodemon": "^3.0.3",
     "sequelize": "^6.28.0",
-    "sharp": "^0.33.2",
     "xml2js": "^0.6.2",
     "xmlbuilder": "^15.1.1",
     "xmlbuilder2": "^3.1.1"
