add function that compress picture then upload it

--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "mysql2": "^3.1.2",
     "nodemon": "^3.0.3",
     "sequelize": "^6.28.0",
+    "sharp": "^0.33.2",
     "xml2js": "^0.6.2",
     "xmlbuilder": "^15.1.1",
     "xmlbuilder2": "^3.1.1"
