--- a/server/.env copy
+++ b/server/.env copy
@@ -6,3 +6,6 @@ DB_DIALECT=
 RENTALS_UNITED_LOGIN=
 RENTALS_UNITED_PASS=
 RENTALS_UNITED_LINK=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
